Nuevas apis
Se modificó deocumentación por inconsistencia en camelCase. Nuevas apis en producto, tipo y subcategoria
